Wed Apr  2 17:43:17 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ac_cv_func___builtin_setjmp): gcc 4.9 disallows a
	  variable as the second argument of __builtin_longjmp().
	  [ruby-core:61800] [Bug #9692]

Wed Apr  2 15:12:18 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* common.mk: Use redmine-2.x url for DeveloperHowto wiki.
	  [ruby-core:60657] [Bug #9511]

Wed Apr  2 11:46:29 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ext/pathname/lib/pathname.rb (Pathname#join): Fix error with
	  empty args. Reported by ko1 via IRC.

	* test/pathname/test_pathname.rb (TestPathname#test_join): Add the
	  test for above case.

Tue Apr  1 11:39:57 2014  James Edward Gray II  <james@graysoftinc.com>

	* lib/csv.rb: Symbol HeaderConverter: strip leading/trailing space.
	  Reported by Skye Shaw
	  [Fixes GH-575]

Tue Apr  1 11:34:04 2014  James Edward Gray II  <james@graysoftinc.com>

	* lib/csv.rb: Don't attempt to convert nil headers.
	  Reported by Skye Shaw

Tue Apr  1 17:29:35 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/config_files.rb (ConfigFiles.download): show failed URI.
	  [ruby-core:61792] [Bug #9690]

Tue Apr  1 12:06:49 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (rb_dump_backtrace_with_lines): don't depend hard coded
	  symbol '_start'.

	* addr2line.c (fill_lines): instead of above, get a dynamic symbol
	  in the main executable and use it to know the base address.

	* addr2line.c (follow_debuglink0): use obj_info_t instead of
	  line_info_t to handle object related data.

	* addr2line.c (main_exe_path): defined for Linux.

Tue Apr  1 08:58:39 2014  Kazuki Tsujimoto  <kazuki@callcc.net>

	* parse.y (rb_str_dynamic_intern): set mark bit if dynamic symbol
	  is before sweeping.

Tue Apr  1 07:37:00 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (fill_lines): use dynsym, which is used for dynamic
	  linking and always exists, if there's no symtab.
